--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=SPIFRAM
-version=0.0.1b
+version=1.0.0
 author=Prajwal Bhattaram
 maintainer=Prajwal Bhattaram <marzogh@icloud.com>
 sentence=Winbond SPI FRAM library for Arduino.
